--- a/wdk/less/components/object-view.less
+++ b/wdk/less/components/object-view.less
@@ -1,7 +1,61 @@
 .wdk_object-view_container {
-
+    margin-left: 10px;
+    font-family: monospace;
+    font-size: large;
+    padding: 1px;
 }
 
 .wdk_object-view_container_root {
+    border: 1px solid #c2c2c2;
+    padding: 2px;
+}
 
+.wdk_object-view_container .type-label-outer {
+    display: inline-block;
+    width: 26px;
+    vertical-align: middle;
+}
+
+.wdk_object-view_container .type-label {
+    display: inline-block;
+    font-family: monospace;
+    opacity: 0.6;
+    font-size: x-small;
+    border: 1px solid #b6b6b6;
+    border-radius: 3px;
+    background: #b3f6cc;
+    padding: 1px;
+    float: right;
+}
+
+.wdk_object-view_container .type-label-array, .wdk_object-view_container .type-label-object {
+    padding: 0 3px 3px;
+}
+
+.wdk_object-view_container .type-label-boolean {
+    font-size: medium;
+    font-weight: bolder;
+    padding: 0 4px;
+}
+
+.wdk_object-view_container .value-array, .wdk_object-view_container .value-object {
+    border: 1px solid #e2e2e2;
+}
+
+.wdk_object-view_container .collection-values {
+    border-top: 1px dotted #e2e2e2;
+}
+
+.wdk_object-view_container .name {
+    font-style: italic;
+    opacity: 0.6;
+}
+
+.wdk_object-view_container .elements-count {
+    font-family: sans-serif;
+    font-style: italic;
+    font-size: small;
+    opacity: 0.6;
+    text-decoration: underline;
+    cursor: pointer;
 }
