--- a/wdk/less/components/object-view.less
+++ b/wdk/less/components/object-view.less
@@ -26,6 +26,7 @@
     background: #b3f6cc;
     padding: 1px;
     float: right;
+    margin-bottom: 2px;
 }
 
 .wdk_object-view_container .type-label-array, .wdk_object-view_container .type-label-object {
@@ -39,11 +40,11 @@
 }
 
 .wdk_object-view_container .value-array, .wdk_object-view_container .value-object {
-    border: 1px solid #e2e2e2;
+    border: 1px solid #dddddd;
 }
 
 .wdk_object-view_container .collection-values {
-    border-top: 1px dotted #e2e2e2;
+    border-top: 1px dashed #e0e0e0;
 }
 
 .wdk_object-view_container .name {
