Object view round border.

--- a/wdk/less/components/object-view.less
+++ b/wdk/less/components/object-view.less
@@ -7,6 +7,7 @@
 
 .wdk_object-view_container_root {
     border: 1px solid #c2c2c2;
+    border-radius: 2px;
     padding: 2px;
 }
 
@@ -41,6 +42,7 @@
 
 .wdk_object-view_container .value-array, .wdk_object-view_container .value-object {
     border: 1px solid #dddddd;
+    border-radius: 2px;
 }
 
 .wdk_object-view_container .collection-values {
