--- a/wdk/less/components/object-view.less
+++ b/wdk/less/components/object-view.less
@@ -25,7 +25,7 @@
     border: 1px solid #b6b6b6;
     border-radius: 3px;
     background: #b3f6cc;
-    padding: 1px;
+    padding: 1px 2px;
     float: right;
     margin-bottom: 2px;
 }
