--- a/wdk/less/components/object-view.less
+++ b/wdk/less/components/object-view.less
@@ -34,6 +34,11 @@
     padding: 0 3px 3px;
 }
 
+.wdk_object-view_container .type-label-null {
+    padding-left: 0;
+    padding-right: 0;
+}
+
 .wdk_object-view_container .type-label-boolean {
     font-size: medium;
     font-weight: bolder;
