Title for object view.

--- a/wdk/less/components/object-view.less
+++ b/wdk/less/components/object-view.less
@@ -5,6 +5,13 @@
     padding: 1px;
 }
 
+.wdk_object-view_container .title {
+    margin-left: 2em;
+    margin-top: 0.2em;
+    margin-bottom: 0.4em;
+    font-family: sans-serif;
+}
+
 .wdk_object-view_container_root {
     border: 1px solid #c2c2c2;
     border-radius: 2px;
