New naming convention for components.

--- a/wdk/less/components/SpinIndicator.less
+++ b/wdk/less/components/SpinIndicator.less
@@ -1,4 +1,4 @@
-.spin-indicator {
+.SpinIndicator {
     border: 0.3rem solid #f3f3f3;
     border-top: 0.3rem solid #9c9c9c;
     border-radius: 50%;
@@ -10,12 +10,12 @@
     margin-right: 0.4rem;
 }
 
-.spin-indicator.small {
+.SpinIndicator.small {
     width: 1.2rem;
     height: 1.2rem;
 }
 
-@keyframes spin-indicator {
+@keyframes SpinIndicator {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
