--- a/wdk/less/components/StatusView.less
+++ b/wdk/less/components/StatusView.less
@@ -1,11 +1,11 @@
 
-.wdk_status-view details summary {
+.wdk_StatusView details summary {
     font-size: 70%;
     cursor: pointer;
     text-decoration: underline;
 }
 
-.wdk_status-view details .details {
+.wdk_StatusView details .details {
     text-align: left;
     font-family: monospace;
     white-space: pre;
