--- a/wdk/less/components/components.less
+++ b/wdk/less/components/components.less
@@ -1,3 +1,3 @@
-@import "spin-indicator";
-@import "status-view";
-@import "object-view";
+@import "SpinIndicator";
+@import "StatusView";
+@import "ObjectView";
