More naming convention fixes.

--- a/wdk/less/components/ObjectView.less
+++ b/wdk/less/components/ObjectView.less
@@ -12,19 +12,19 @@
     font-family: sans-serif;
 }
 
-.wdk_ObjectView_container_root {
+.wdk_ObjectView_containerRoot {
     border: 1px solid #c2c2c2;
     border-radius: 2px;
     padding: 2px;
 }
 
-.wdk_ObjectView_container .type-label-outer {
+.wdk_ObjectView_container .typeLabelOuter {
     display: inline-block;
     width: 26px;
     vertical-align: middle;
 }
 
-.wdk_ObjectView_container .type-label {
+.wdk_ObjectView_container .typeLabel {
     display: inline-block;
     font-family: monospace;
     opacity: 0.6;
@@ -37,27 +37,27 @@
     margin-bottom: 2px;
 }
 
-.wdk_ObjectView_container .type-label-array, .wdk_ObjectView_container .type-label-object {
+.wdk_ObjectView_container .typeLabel_array, .wdk_ObjectView_container .typeLabel_object {
     padding: 0 3px 3px;
 }
 
-.wdk_ObjectView_container .type-label-null {
+.wdk_ObjectView_container .typeLabel_null {
     padding-left: 0;
     padding-right: 0;
 }
 
-.wdk_ObjectView_container .type-label-boolean {
+.wdk_ObjectView_container .typeLabel_boolean {
     font-size: medium;
     font-weight: bolder;
     padding: 0 4px;
 }
 
-.wdk_ObjectView_container .value-array, .wdk_ObjectView_container .value-object {
+.wdk_ObjectView_container .value_array, .wdk_ObjectView_container .value_object {
     border: 1px solid #dddddd;
     border-radius: 2px;
 }
 
-.wdk_ObjectView_container .collection-values {
+.wdk_ObjectView_container .collectionValues {
     border-top: 1px dashed #e0e0e0;
 }
 
@@ -66,7 +66,7 @@
     opacity: 0.6;
 }
 
-.wdk_ObjectView_container .elements-count {
+.wdk_ObjectView_container .elementsCount {
     font-family: sans-serif;
     font-style: italic;
     font-size: small;
