ObjectView font tuning.

--- a/wdk/less/components/ObjectView.less
+++ b/wdk/less/components/ObjectView.less
@@ -1,7 +1,6 @@
 .wdk_ObjectView_container {
-    margin-left: 10px;
     font-family: monospace;
-    font-size: large;
+    font-size: 0.9rem;
     padding: 1px;
 }
 
