Fix spin indicator animation.

--- a/wdk/less/components/SpinIndicator.less
+++ b/wdk/less/components/SpinIndicator.less
@@ -4,7 +4,7 @@
     border-radius: 50%;
     width: 1.7rem;
     height: 1.7rem;
-    animation: spin-indicator 1s linear infinite;
+    animation: SpinIndicator 1s linear infinite;
     display: inline-block;
     vertical-align: middle;
     margin-right: 0.4rem;
