Refactor LESS code.
Signed-off-by: Artyom <vagran.ast@gmail.com>

--- a/wdk/less/components/EdiatbleProperties.less
+++ b/wdk/less/components/EdiatbleProperties.less
@@ -1,8 +1,10 @@
-.EditableProperties table {
-    border-collapse: separate;
-    border-spacing: 1em 0.1em;
-}
+.EditableProperties {
+    table {
+        border-collapse: separate;
+        border-spacing: 1em 0.1em;
 
-.EditableProperties table td.label {
-    text-align: right;
+        td.label {
+            text-align: right;
+        }
+    }
 }
