--- a/wdk/less/components/EditableField.less
+++ b/wdk/less/components/EditableField.less
@@ -1,16 +1,14 @@
 div.wdk_EditableField {
     display: inline-block;
     cursor: pointer;
-}
 
-.wdk_EditableField .label {
+    .label {}
 
-}
+    .editButton {
+        opacity: 0.3;
+    }
 
-.wdk_EditableField .editButton {
-    opacity: 0.3;
-}
-
-.wdk_EditableField:hover .editButton {
-    opacity: 0.9;
+    &:hover .editButton {
+        opacity: 0.9;
+    }
 }
