--- a/wdk/less/components/StatusView.less
+++ b/wdk/less/components/StatusView.less
@@ -1,12 +1,15 @@
+.wdk_StatusView {
+    details {
+        summary {
+            font-size: 70%;
+            cursor: pointer;
+            text-decoration: underline;
+        }
 
-.wdk_StatusView details summary {
-    font-size: 70%;
-    cursor: pointer;
-    text-decoration: underline;
-}
-
-.wdk_StatusView details .details {
-    text-align: left;
-    font-family: monospace;
-    white-space: pre;
+        .details {
+            text-align: left;
+            font-family: monospace;
+            white-space: pre;
+        }
+    }
 }
