--- a/wdk/less/components/SpinIndicator.less
+++ b/wdk/less/components/SpinIndicator.less
@@ -8,11 +8,11 @@
     display: inline-block;
     vertical-align: middle;
     margin-right: 0.4rem;
-}
 
-.SpinIndicator.small {
-    width: 1.2rem;
-    height: 1.2rem;
+    &.small {
+        width: 1.2rem;
+        height: 1.2rem;
+    }
 }
 
 @keyframes SpinIndicator {
