New status view sketch.

--- a/wdk/less/components/components.less
+++ b/wdk/less/components/components.less
@@ -1,5 +1,6 @@
 @import "SpinIndicator";
 @import "StatusView";
+@import "StatusView_new";//XXX
 @import "ObjectView";
 @import "EditableField";
 @import "EdiatbleProperties";
