Implementing new status view.
Signed-off-by: Artyom <vagran.ast@gmail.com>

--- a/wdk/less/components/StatusView_new.less
+++ b/wdk/less/components/StatusView_new.less
@@ -1,3 +1,49 @@
 .wdk_StatusView_new {
+    li.top, li.bottom {
+        padding: 0.1rem 2rem;
+        font-size: 0.8rem;
+    }
 
+    div.title {
+        padding-left: 1rem;
+        font-size: 0.9rem;
+        font-weight: 600;
+    }
+
+    span.count {
+        border-width: 1px;
+        border-style: solid;
+    }
+
+    .list-group-item-success span.count {
+        border-color: var(--success);
+    }
+
+    .list-group-item-info span.count {
+        border-color: var(--info);
+    }
+
+    .list-group-item-warning span.count {
+        border-color: var(--warning);
+    }
+
+    .list-group-item-danger span.count {
+        border-color: var(--danger);
+    }
+
+    .list-group-item-primary span.count {
+        border-color: var(--primary);
+    }
+
+    .list-group-item-secondary span.count {
+        border-color: var(--secondary);
+    }
+
+    .list-group-item-light span.count {
+        border-color: var(--light);
+    }
+
+    .list-group-item-dark span.count {
+        border-color: var(--dark);
+    }
 }
