Implementing new status view (toast).
Signed-off-by: Artyom <vagran.ast@gmail.com>

--- a/wdk/less/components/StatusView_new.less
+++ b/wdk/less/components/StatusView_new.less
@@ -1,4 +1,14 @@
 .wdk_StatusView_new {
+    &.WdkToast {
+        position: fixed;
+        right: 5%;
+        top: 20%;
+        z-index: 2000;
+        max-width: 80%;
+        max-height: 70%;
+        overflow: auto;
+    }
+
     li.top, li.bottom {
         padding: 0.1rem 2rem;
         font-size: 0.8rem;
