--- a/wdk/less/components/StatusView_new.less
+++ b/wdk/less/components/StatusView_new.less
@@ -7,6 +7,7 @@
         max-width: 80%;
         max-height: 70%;
         overflow: auto;
+        opacity: 0.9;
     }
 
     li.top, li.bottom {
@@ -55,5 +56,20 @@
 
     .list-group-item-dark span.count {
         border-color: var(--dark);
+    }
+
+    details {
+        summary {
+            font-size: 0.7rem;
+            cursor: pointer;
+            text-decoration: underline;
+        }
+
+        .details {
+            text-align: left;
+            font-family: var(--font-family-monospace);
+            white-space: pre;
+            overflow: auto;
+        }
     }
 }
