EntitiesList: item adding via full form.

--- a/wdk/less/components/EntitiesList.less
+++ b/wdk/less/components/EntitiesList.less
@@ -73,4 +73,21 @@
             }
         }
     }
+
+    .newItemContainer {
+        border: solid 1px #dddddd;
+
+        h1 {
+            font-size: 0.9rem;
+            font-style: italic;
+            opacity: 0.8;
+            margin: 2px 5px 4px;
+        }
+
+        div.closeLink {
+            text-align: right;
+            margin-right: 10px;
+            font-size: 0.9rem;
+        }
+    }
 }
