--- a/wdk/less/components/EntitiesList.less
+++ b/wdk/less/components/EntitiesList.less
@@ -14,18 +14,30 @@
         padding: 0.6rem;
     }
 
-    .deleteButton {
+    .button {
         opacity: 0.3;
         cursor: pointer;
-        color: var(--danger);
-        border: 1px solid var(--danger);
-        border-radius: 0.1em;
+        border-radius: 0.2em;
         padding: 0 0.2em;
         margin-left: 0.2em;
+        border-width: 1px;
+        border-style: solid;
 
         &:hover {
             opacity: 1.0;
         }
+    }
+
+    span.deleteButton {
+        .button();
+        color: var(--danger);
+        border-color: var(--danger);
+    }
+
+    span.editButton {
+        .button();
+        color: var(--gray-dark);
+        border-color: var(--gray-dark);
     }
 
     span.item.editable {
