--- a/wdk-legacy/less/components/EdiatbleProperties.less
+++ b/wdk-legacy/less/components/EdiatbleProperties.less
@@ -4,7 +4,7 @@
  * See LICENSE file for full license details.
  */
 
-.EditableProperties {
+.wdkEditableProperties {
     table {
         border-collapse: separate;
         border-spacing: 1em 0.1em;
