WDK default link style in example.

--- a/wdk/example/src/assets/styles/global.less
+++ b/wdk/example/src/assets/styles/global.less
@@ -16,3 +16,12 @@
     background-image: url("../images/loading-placeholder.svg");
     background-size: cover;
 }
+
+a {
+    color: #007bff;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
